--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,7 +23,7 @@
 <body>
   <% unless @no_header %>
     <header>
-      <a href="https://github.com/you"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
+      <a href="https://github.com/seanslerner/before-leaving-oregon"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
       <br>
       <h1><a href="/"><%= settings.title %></a></h1>
       <br>
