--- a/views/layout.erb
+++ b/views/layout.erb
@@ -29,7 +29,7 @@
       <br>
       <p>McKenzie and I are leaving Oregon soon and want to experience as much here as possible. These are some things we should see, do, or eat before leaving town.</p>
       <br>
-      <a href="/suggestion"><h4>Submit something we should do!</h4></a>
+      <a href="/suggestion"><h4>Suggest something we should do!</h4></a>
     </header>
   <% end %>
 
