--- a/public/style.css
+++ b/public/style.css
@@ -113,11 +113,11 @@ a.button:hover {
   background: red;
 }
 
-#vote-up:hover {
+.vote-up:hover {
   color: green;
 }
 
-#vote-down:hover {
+.vote-down:hover {
   color: red;
 }
 
