--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,7 @@
   <title><%= settings.title %></title>
   <link rel="stylesheet" href="/style.css">
   <link href='http://fonts.googleapis.com/css?family=Lato:300,900' rel='stylesheet' type='text/css' />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <% if @no_header %>
     <style type="text/css">
       #container {
