--- a/views/new.erb
+++ b/views/new.erb
@@ -1,7 +1,13 @@
 <form action="/new" class="new_thing" id="new_thing" method="post">
   <input id="thing_title" name="thing[title]" placeholder="Thing Here" rows="1"></input>
   <br> 
-  <input id="thing_tags" name="thing[tags]" placeholder="tags, go, here"></input>
+  <select id="thing_tags" name="thing[tags]">
+    <option value="EAT">EAT</option>
+    <option value="SEE">SEE</option>
+    <option vlaue="DO">DO</option>
+  </select>
+  <br>
+  <textarea id="thing_notes" name="thing[notes]" placeholder="Anything we should know about this?"></textarea>
   <br>
   <label for="thing_suggestion">Publish?</label>
   <input name="thing[suggestion]" type="hidden" value="1" /><input checked="checked" id="thing_suggestion" name="thing[suggestion]" type="checkbox" value="0" />
