--- a/views/suggestion.erb
+++ b/views/suggestion.erb
@@ -3,7 +3,13 @@
   <br>
   <input id="thing_title" name="thing[title]" placeholder="Thing Here" rows="1"></input>
   <br> 
- <input id="thing_tags" name="thing[tags]" placeholder="tags, go, here"></input>
+  <select id="thing_tags" name="thing[tags]">
+    <option value="EAT">EAT</option>
+    <option value="SEE">SEE</option>
+    <option vlaue="DO">DO</option>
+  </select>
+  <br>
+  <textarea id="thing_notes" name="thing[notes]" placeholder="Anything we should know about this?"></textarea>
   <br>
   <input id="save-button" name="commit" type="submit" value="Save" />
   <div style="clear: both;"></div>
