added message to sidebar

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -30,6 +30,8 @@
       <br>
       <p>McKenzie and I are leaving Oregon soon and want to experience as much here as possible. These are some things we should see, do, or eat before leaving town.</p>
       <br>
+      <p>As we do things, we'll try and add some notes letting you know how it was!</p>
+      <br>
       <a href="/suggestion"><h4>Suggest something we should do!</h4></a>
     </header>
   <% end %>
