--- a/views/thing.erb
+++ b/views/thing.erb
@@ -1,3 +1,3 @@
-<h1><%= "style=\"text-decoration: line-through;\"" if @thing.completed %><%= "<span id=\"#{@thing.tags}\"><a href=\"/#{@thing.tags}\" id=\"tag-link\">#{@thing.tags}</a></span>" %><%= @thing.title %> <small style="margin: 0 20px;"> <%= @thing.votes %> </small></h1>
+<h1 <%= "style=\"text-decoration: line-through;\"" if @thing.completed %>><%= "<span id=\"#{@thing.tags}\"><a href=\"/#{@thing.tags}\" id=\"tag-link\">#{@thing.tags}</a></span>" %><%= @thing.title %> <small style="margin: 0 20px;"> <%= @thing.votes %> </small></h1>
 <br>
 <p><%= @thing.notes %></p>
